--- a/MessageBroker/Test_Environment/MessageBroker-pipe.yaml
+++ b/MessageBroker/Test_Environment/MessageBroker-pipe.yaml
@@ -1,21 +1,17 @@
+# Type of queue Message Broker should use
+# Accepted values: VM, JMS
 mb:
   pipe:
     queue:
-#Please mention the correct queue type and then pass the appropriated properties.
       type: "JMS"
-    vm:
-      state: "stopped"
+
+#Message Broker JMS Queue with AcitveMQ Properties
     jms:
-      state: "started"
-      checkConnectivity: true
       queueName: "MB_PIPE"
-## Please uncomment the property and update the broker url      
-      brokerURL: "failover:tcp://IN2NPDITL06:61616"
+      brokerURL: "failover://tcp://IN2NPDITL06:61616"
       maxConnections: "30"
       concurrentConsumers: "30"
       initialRedeliveryDelay: "20000"
       redeliveryDelay: "20000"
       sessionCacheSize: "100"
       maximumRedeliveries: "-1"
-
-    
