--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -80,7 +80,7 @@ messageStore.serviceInstance=WMA
 messageStore.serviceHostName=server.host
 messageStore.serviceNamedVersion=WMA-2020.1.0
 messageStore.testMessage=false
-messageStore.failWhenDuplicate=false
+messageStore.failWhenDuplicate=true
 messageStore.https.tls.trustStore.path=truststore.jks
 messageStore.responseTimeout=60000
 messageStore.connectionIdleTimeout=60000
@@ -113,6 +113,7 @@ message.outbound.native.default.messageReceiver=HOST.GLOBAL
 # Message Archiving
 message.archive.location=C:/wma-2020.1.0/messageArchive
 message.archive.enabled=true
+
 # Resource Path for codeMap
 message.codemap.resource.path=configurations/codeMappings.xml
 
@@ -154,18 +155,18 @@ outbound.request.native.gs1.list=PART_OUB_IFD,INVENTORY_RECEIPT_IFD,REVERSE_RECE
 
 # GS1 Message Models
 inventoryOperationMessage.model=#[['GS1_JDA 2020.1.0']]
-orderMessage.model=#[['GS1_JDA 2020.2.0','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
-transportLoadMessage.model=#[['GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
+orderMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
+transportLoadMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
 despatchAdviceMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
-receivingAdviceMessage.model=#[['GS1_JDA 2019.1.1','GS1_JDA 2017.2.0','GS1_JDA 2019.1.0','GS1_JDA 2020.1.0']]
+receivingAdviceMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2017.2.0','GS1_JDA 2019.1.0']]
 warehousingOutboundInstructionMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
 warehousingOutboundNotificationMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2017.2.0']]
 transportPickUpDropOffRequestMessage.model=#[['GS1_JDA 2017.2.0']]
 transportPickUpDropOffConfirmationMessage.model=#[['GS1_JDA 2017.2.0']]
-locationMessage.model=#[['GS1_JDA 2017.2.0']]
-partyMessage.model=#[['GS1_JDA 2017.2.0']]
+locationMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2017.2.0']]
+partyMessage.model=#[['GS1_JDA 2019.1.1','GS1_JDA 2017.2.0']]
 applicationReceiptAcknowledgementMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.0']]
-itemMessage.model=#[['GS1_JDA 2019.1.0','GS1_JDA 2019.1.1','GS1_JDA 2020.2.0']]
+itemMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.0','GS1_JDA 2019.1.1']]
 nativeMessage.model=#[['GS1_JDA 2019.1.1']]
 inventoryReportMessage.model=#[['GS1_JDA 2020.1.0']]
 
@@ -192,9 +193,8 @@ itemMessage.version=GS1_JDA 2019.1.1
 # Native Message specific version in WM Integrator
 PART_INB_IFD.version=2019.1
 
-# Default values for Non-3PL integration
-wms.default.clientId=----
-wms.default.warehouseId=----
+# PART_INB_IFD Message Default values
+wms.default.warehouseId=DC0001
 
 # Include Dynamic Receivers for DA Message eg: LOC.DC0001,LOC.ST001. 
 # The property can take value like DC0001,ST001 etc.
@@ -217,9 +217,6 @@ inventoryReportMessage.receivers=HOST.GLOBAL
 
 # Senders for each message
 itemMessage.senders=HOST.GLOBAL
-
-# Check the sender of the Message
-wma.message.sender.system=SAP.*
 
 #Valid values while running MUNIT isMUnit=true | #isMUnit=false (Comment # to be disabled)
 #isMUnit=false
