--- a/MessageBroker/Test_Environment/resources/configuration/converter-config.yaml
+++ b/MessageBroker/Test_Environment/resources/configuration/converter-config.yaml
@@ -9,14 +9,14 @@
  
 # Below reads as - For receiver list <Wma.EAST|WMA.WEST> , list of message types <itemMessage|locationMessage|orderMessage> should be converted to BYDM model.
 
-- 'Wma.EAST|WMA.WEST:itemMessage|locationMessage|partyMessage|orderMessage:BYDM'
+- 'Wma.EAST|WMA.WEST:itemMessage|locationMessage|orderMessage:BYDM'
 
 # Below is wild card matching example. All messageTypes for WMA.EAST should be converted to GS1. 
 # This is a 1st match list. Ops need to make sure that wild card entry is appearing after named lists.
 # As if we put line 19 before line 12 , we wil lnot get the desired result as all messageTypes will be matched for GS1 
 # where as intention was to convert <itemMessage|locationMessage|orderMessage> to BYDM and rest to GS1 but since wildcard matches all , named list will never be matched.
 
-- 'LOC.*:*:GS1'
-- 'TMS.GLOBAL:*:BYDM'
-- 'HOST.GLOBAL:*:GS1'
-- 'ACK.GLOBAL:*:GS1'
+- 'Wma.EAST:*:GS1'
+- 'TMA.WEST:itemMessage|locationMessage:BYDM'
+- 'TMA.WEST:*:GS1'
+- 'LOC.DOC0001:*:GS3'
