--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -51,7 +51,7 @@ jms.queue.mb.tpb.in=TPB-WMA
 # WMA and WM Integrator
 jms.queue.wma.wmi=WMA-WMS
 jms.queue.wmi.wma=WMS-WMA
-jms.queue.wma.wmiN=WMA-WMIN
+jms.queue.wma.wmiN=WMA-WMS
 
 # SRS Versioning Properties
 srs.hostName=IN2NPDITL06.dev.corp.local
