Configuration service upload

--- a/ServicesRegistry/Test_Environment/resources/configuration/service-definitions/WMA.yaml
+++ b/ServicesRegistry/Test_Environment/resources/configuration/service-definitions/WMA.yaml
@@ -3,57 +3,51 @@ name: WMA
 description: WM adapter for WMS
 inbound:
   requests:
-    - message: 'GS1:TransferOrder:GS1_JDA 2020.1.0'
-      flow: 'flow-in-transferOrder'
     - message: 'GS1:TransferOrder:GS1_JDA 2019.1.0'
       flow: 'flow-in-transferOrder'
     - message: 'GS1:TransferOrder:GS1_JDA 2017.2.0'
       flow: 'flow-in-transferOrder'
-    - message: 'GS1:PurchaseOrder:GS1_JDA 2020.1.0'
-      flow: 'flow-in-purchaseOrder'
     - message: 'GS1:PurchaseOrder:GS1_JDA 2019.1.0'
       flow: 'flow-in-purchaseOrder'
     - message: 'GS1:PurchaseOrder:GS1_JDA 2017.2.0'
       flow: 'flow-in-purchaseOrder'
-    - message: 'GS1:OrderRelease:GS1_JDA 2020.1.0'
-      flow: 'flow-in-customerOrder'
     - message: 'GS1:OrderRelease:GS1_JDA 2019.1.0'
       flow: 'flow-in-customerOrder'
     - message: 'GS1:OrderRelease:GS1_JDA 2017.2.0'
       flow: 'flow-in-customerOrder'
     - message: 'GS1:ReturnOrder:GS1_JDA 2017.2.0'
       flow: 'flow-in-returnOrder'
-    - message: 'GS1:transportLoadMessage:GS1_JDA 2020.1.0'
-      flow: 'flow-in-transportLoad'
     - message: 'GS1:transportLoadMessage:GS1_JDA 2019.1.1'
       flow: 'flow-in-transportLoad'
     - message: 'GS1:transportLoadMessage:GS1_JDA 2019.1.0'
       flow: 'flow-in-transportLoad'
     - message: 'GS1:transportLoadMessage:GS1_JDA 2017.2.0'
       flow: 'flow-in-transportLoad'
-    - message: 'GS1:despatchAdviceMessage:GS1_JDA 2020.1.0'
-      flow: 'flow-in-despatchAdvice'
     - message: 'GS1:despatchAdviceMessage:GS1_JDA 2019.1.1'
       flow: 'flow-in-despatchAdvice'
     - message: 'GS1:despatchAdviceMessage:GS1_JDA 2017.2.0'
       flow: 'flow-in-despatchAdvice'
     - message: 'GS1:transportPickUpDropOffRequestMessage:GS1_JDA 2017.2.0'
       flow: 'flow-in-transportPickUpDropOffRequest'
-    - message: 'GS1:locationMessage:GS1_JDA 2020.1.0'
-      flow: 'flow-in-location'
     - message: 'GS1:locationMessage:GS1_JDA 2017.2.0'
       flow: 'flow-in-location'
-    - message: 'GS1:partyMessage:GS1_JDA 2019.1.1'
-      flow: 'flow-in-party'
     - message: 'GS1:partyMessage:GS1_JDA 2017.2.0'
       flow: 'flow-in-party'
-    - message: 'GS1:itemMessage:GS1_JDA 2020.1.0'
+    - message: 'GS1:itemMessage:GS1_JDA 2019.1.0'
       flow: 'flow-in-item'
     - message: 'GS1:itemMessage:GS1_JDA 2019.1.1'
       flow: 'flow-in-item'
-    - message: 'GS1:itemMessage:GS1_JDA 2019.1.0'
+    - message: 'GS1:itemMessage:GS1_JDA 2020.2.0'
       flow: 'flow-in-item'
-      
+    - message: 'GS1:TransferOrder:GS1_JDA 2020.2.0'
+      flow: 'flow-in-transferOrder'
+    - message: 'GS1:PurchaseOrder:GS1_JDA 2020.2.0'
+      flow: 'flow-in-purchaseOrder'
+    - message: 'GS1:OrderRelease:GS1_JDA 2020.2.0'
+      flow: 'flow-in-customerOrder'
+    - message: 'GS1:ReturnOrder:GS1_JDA 2020.2.0'
+      flow: 'flow-in-returnOrder'
+            
 outbound:
   responses:
     - message: 'GS1:TransferOrder:GS1_JDA 2019.1.0'
@@ -78,8 +72,6 @@ outbound:
       flow: 'flow-out-receivingAdviceMessage'
     - message: 'GS1:receivingAdviceMessage:GS1_JDA 2017.2.0'
       flow: 'flow-out-receivingAdviceMessage'
-    - message: 'GS1:receivingAdviceMessage:GS1_JDA 2020.1.0'
-      flow: 'flow-out-receivingAdviceMessage' 
     - message: 'GS1:warehousingOutboundNotificationMessage:GS1_JDA 2020.1.0'
       flow: 'flow-out-warehouseOutboundNotificationMessage'
     - message: 'GS1:warehousingOutboundNotificationMessage:GS1_JDA 2019.1.1'
@@ -96,3 +88,4 @@ outbound:
       flow: 'flow-out-warehouseOutboundInstructionMessage'
     - message: 'GS1:applicationReceiptAcknowledgementMessage:GS1_JDA 2019.1.0'
       flow: 'flow-out-applicationReceiptAcknowledgementMessage'
+    
