Configuration service upload

--- a/ServicesRegistry/Test_Environment/resources/configuration/service-definitions/WMA.yaml
+++ b/ServicesRegistry/Test_Environment/resources/configuration/service-definitions/WMA.yaml
@@ -23,7 +23,11 @@ inbound:
       flow: 'flow-in-transportLoad'
     - message: 'GS1:transportLoadMessage:GS1_JDA 2017.2.0'
       flow: 'flow-in-transportLoad'
+    - message: 'GS1:despatchAdviceMessage:GS1_JDA 2020.1.0'
+      flow: 'flow-in-despatchAdvice'
     - message: 'GS1:despatchAdviceMessage:GS1_JDA 2019.1.1'
+      flow: 'flow-in-despatchAdvice'
+    - message: 'GS1:despatchAdviceMessage:GS1_JDA 2019.1.0'
       flow: 'flow-in-despatchAdvice'
     - message: 'GS1:despatchAdviceMessage:GS1_JDA 2017.2.0'
       flow: 'flow-in-despatchAdvice'
@@ -68,6 +72,8 @@ outbound:
       flow: 'flow-out-despatchAdviceMessage'
     - message: 'GS1:despatchAdviceMessage:GS1_JDA 2017.2.0'
       flow: 'flow-out-despatchAdviceMessage'
+    - message: 'GS1:receivingAdviceMessage:GS1_JDA 2020.2.0'
+      flow: 'flow-out-receivingAdviceMessage'
     - message: 'GS1:receivingAdviceMessage:GS1_JDA 2019.1.1'
       flow: 'flow-out-receivingAdviceMessage'
     - message: 'GS1:receivingAdviceMessage:GS1_JDA 2017.2.0'
