Configuration service upload

--- a/ServicesRegistry/Test_Environment/resources/configuration/service-definitions/WMA.yaml
+++ b/ServicesRegistry/Test_Environment/resources/configuration/service-definitions/WMA.yaml
@@ -17,6 +17,8 @@ inbound:
       flow: 'flow-in-customerOrder'
     - message: 'GS1:ReturnOrder:GS1_JDA 2017.2.0'
       flow: 'flow-in-returnOrder'
+    - message: 'GS1:transportLoadMessage:GS1_JDA 2020.1.0'
+      flow: 'flow-in-transportLoad'
     - message: 'GS1:transportLoadMessage:GS1_JDA 2019.1.1'
       flow: 'flow-in-transportLoad'
     - message: 'GS1:transportLoadMessage:GS1_JDA 2019.1.0'
