--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -155,16 +155,16 @@ outbound.request.native.gs1.list=PART_OUB_IFD,INVENTORY_RECEIPT_IFD,REVERSE_RECE
 
 # GS1 Message Models
 inventoryOperationMessage.model=#[['GS1_JDA 2020.1.0']]
-orderMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
+orderMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
 transportLoadMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
 despatchAdviceMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
-receivingAdviceMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2017.2.0','GS1_JDA 2019.1.0']]
+receivingAdviceMessage.model=#[['GS1_JDA 2019.1.1','GS1_JDA 2017.2.0','GS1_JDA 2019.1.0','GS1_JDA 2020.1.0']]
 warehousingOutboundInstructionMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
 warehousingOutboundNotificationMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2017.2.0']]
 transportPickUpDropOffRequestMessage.model=#[['GS1_JDA 2017.2.0']]
 transportPickUpDropOffConfirmationMessage.model=#[['GS1_JDA 2017.2.0']]
-locationMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2017.2.0']]
-partyMessage.model=#[['GS1_JDA 2019.1.1','GS1_JDA 2017.2.0']]
+locationMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
+partyMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.1','GS1_JDA 2019.1.0','GS1_JDA 2017.2.0']]
 applicationReceiptAcknowledgementMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.0']]
 itemMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.0','GS1_JDA 2019.1.1']]
 nativeMessage.model=#[['GS1_JDA 2019.1.1']]
@@ -192,6 +192,7 @@ itemMessage.version=GS1_JDA 2019.1.1
 
 # Native Message specific version in WM Integrator
 PART_INB_IFD.version=2019.1
+PART_HIERARCHY_INB_IFD.version=9.1
 
 # PART_INB_IFD Message Default values
 wms.default.warehouseId=DC0001
