--- a/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
+++ b/jda_if_wmadapter/Test_Environment/jda_if_wmadapter.properties
@@ -169,6 +169,7 @@ applicationReceiptAcknowledgementMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 20
 itemMessage.model=#[['GS1_JDA 2020.1.0','GS1_JDA 2019.1.0','GS1_JDA 2019.1.1']]
 nativeMessage.model=#[['GS1_JDA 2019.1.1']]
 inventoryReportMessage.model=#[['GS1_JDA 2020.1.0']]
+itemHierarchyLevelMemberMessage.model=#[['GS1_JDA 2019.1.0','GS1_JDA 2019.1.1','GS1_JDA 2020.3.0']]
 
 # Code List Validation: IGNORE | WARNING | ERROR
 gs1.codeListValidation=WARNING
