--- a/ServicesRegistry/Test_Environment/resources/configuration/service-definitions/WMA.yaml
+++ b/ServicesRegistry/Test_Environment/resources/configuration/service-definitions/WMA.yaml
@@ -3,14 +3,26 @@ name: WMA
 description: WM adapter for WMS
 inbound:
   requests:
+    - message: 'GS1:TransferOrder:GS1_JDA 2020.1.0'
+      flow: 'flow-in-transferOrder'
+    - message: 'GS1:TransferOrder:GS1_JDA 2019.1.1'
+      flow: 'flow-in-transferOrder'
     - message: 'GS1:TransferOrder:GS1_JDA 2019.1.0'
       flow: 'flow-in-transferOrder'
     - message: 'GS1:TransferOrder:GS1_JDA 2017.2.0'
       flow: 'flow-in-transferOrder'
+    - message: 'GS1:PurchaseOrder:GS1_JDA 2020.1.0'
+      flow: 'flow-in-purchaseOrder'
+    - message: 'GS1:PurchaseOrder:GS1_JDA 2019.1.1'
+      flow: 'flow-in-purchaseOrder'
     - message: 'GS1:PurchaseOrder:GS1_JDA 2019.1.0'
       flow: 'flow-in-purchaseOrder'
     - message: 'GS1:PurchaseOrder:GS1_JDA 2017.2.0'
       flow: 'flow-in-purchaseOrder'
+    - message: 'GS1:OrderRelease:GS1_JDA 2020.1.0'
+      flow: 'flow-in-customerOrder' 
+    - message: 'GS1:OrderRelease:GS1_JDA 2019.1.1'
+      flow: 'flow-in-customerOrder'     
     - message: 'GS1:OrderRelease:GS1_JDA 2019.1.0'
       flow: 'flow-in-customerOrder'
     - message: 'GS1:OrderRelease:GS1_JDA 2017.2.0'
@@ -35,25 +47,33 @@ inbound:
       flow: 'flow-in-despatchAdvice'
     - message: 'GS1:transportPickUpDropOffRequestMessage:GS1_JDA 2017.2.0'
       flow: 'flow-in-transportPickUpDropOffRequest'
+    - message: 'GS1:locationMessage:GS1_JDA 2020.1.0'
+      flow: 'flow-in-location'
+    - message: 'GS1:locationMessage:GS1_JDA 2019.1.1'
+      flow: 'flow-in-location'
+    - message: 'GS1:locationMessage:GS1_JDA 2019.1.0'
+      flow: 'flow-in-location'
     - message: 'GS1:locationMessage:GS1_JDA 2017.2.0'
       flow: 'flow-in-location'
+    - message: 'GS1:partyMessage:GS1_JDA 2019.1.1'
+      flow: 'flow-in-party'
+    - message: 'GS1:partyMessage:GS1_JDA 2019.1.0'
+      flow: 'flow-in-party'
     - message: 'GS1:partyMessage:GS1_JDA 2017.2.0'
       flow: 'flow-in-party'
-    - message: 'GS1:itemMessage:GS1_JDA 2019.1.0'
+    - message: 'GS1:itemMessage:GS1_JDA 2020.1.0'
       flow: 'flow-in-item'
     - message: 'GS1:itemMessage:GS1_JDA 2019.1.1'
       flow: 'flow-in-item'
-    - message: 'GS1:itemMessage:GS1_JDA 2020.2.0'
+    - message: 'GS1:itemMessage:GS1_JDA 2019.1.0'
       flow: 'flow-in-item'
-    - message: 'GS1:TransferOrder:GS1_JDA 2020.2.0'
-      flow: 'flow-in-transferOrder'
-    - message: 'GS1:PurchaseOrder:GS1_JDA 2020.2.0'
-      flow: 'flow-in-purchaseOrder'
-    - message: 'GS1:OrderRelease:GS1_JDA 2020.2.0'
-      flow: 'flow-in-customerOrder'
-    - message: 'GS1:ReturnOrder:GS1_JDA 2020.2.0'
-      flow: 'flow-in-returnOrder'
-            
+    - message: 'GS1:itemHierarchyLevelMemberMessage:GS1_JDA 2019.1.0'
+      flow: 'flow-in-itemHierarchy'
+    - message: 'GS1:itemHierarchyLevelMemberMessage:GS1_JDA 2019.1.1'
+      flow: 'flow-in-itemHierarchy'
+    - message: 'GS1:itemHierarchyLevelMemberMessage:GS1_JDA 2020.3.0'
+      flow: 'flow-in-itemHierarchy'
+      
 outbound:
   responses:
     - message: 'GS1:TransferOrder:GS1_JDA 2019.1.0'
@@ -74,8 +94,6 @@ outbound:
       flow: 'flow-out-despatchAdviceMessage'
     - message: 'GS1:despatchAdviceMessage:GS1_JDA 2017.2.0'
       flow: 'flow-out-despatchAdviceMessage'
-    - message: 'GS1:receivingAdviceMessage:GS1_JDA 2020.2.0'
-      flow: 'flow-out-receivingAdviceMessage'
     - message: 'GS1:receivingAdviceMessage:GS1_JDA 2019.1.1'
       flow: 'flow-out-receivingAdviceMessage'
     - message: 'GS1:receivingAdviceMessage:GS1_JDA 2017.2.0'
